# napling-choice-awards

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  deploy.sh
backend/: .env.example  README_UV.md  SECURITY.md  app.py  database_setup.py  fix_ids.py  pyproject.toml  requirements.txt  test_data.py  test_s3.py
deployment/: deploy.sh  gunicorn.service  nginx.conf
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: Admin.js  Home.css  Home.js  Login.js  Results.css  Results.js  VideoModal.js
frontend/src/contexts/: ThemeContext.js
